--- a/changelog
+++ b/changelog
@@ -1,3 +1,3 @@
-Migrazione da RoutineHub a GitHub per fixare il problema della risposta troppo lenta alle query per l'auto-update
+Migrazione da RoutineHub a GitHub per fixare il problema della risposta troppo lenta alle query per l'auto-update. Corretto errore nel versioning.
 
-Migration from RoutineHub to GitHub, to fix the earlier hot-fixed problem with RoutineHub's APIs being too slow to reply to auto-update queries
+Migration from RoutineHub to GitHub, to fix the earlier hot-fixed problem with RoutineHub's APIs being too slow to reply to auto-update queries. Corrected versioning error
