--- a/changelog
+++ b/changelog
@@ -1,3 +1,3 @@
-Modificato il modo in cui lo shortcut gestisce i secondi nodi WindTre, facendo in modo che in caso di collegamento a un nodo secondario venga comunque aperta la pagina LTE Italy del nodo principale, in modo da mostrare foto più recenti e informazioni più complete
+Aggiunto il supporto alla B28 iliad, CID 7x.
 
-Modified the way the shortcut handles WindTre's secondary nodes. Now, even when the user is connected to a secondary eNB, LTE Italy's page for the primary node will be opened to show more updated images and more complete info
+Added support for iliad's B28 CIDs, 7x.
