--- a/changelog
+++ b/changelog
@@ -1,3 +1,3 @@
-Aggiunto il supporto alla B28 iliad, CID 7x.
+Piccolo cambiamento all'autoupdate.
 
-Added support for iliad's B28 CIDs, 7x.
+Small change to autoupdate.
