Updated shortcut to v0.6, modified an image in README, updated README

--- a/changelog
+++ b/changelog
@@ -1,3 +1,3 @@
-Piccolo cambiamento all'autoupdate.
+Aggiunta la possibilità di aprire la mappa centrata nella propria posizione invece che aprire per forza la pagina con le informazioni della BTS.
 
-Small change to autoupdate.
+Added the possibility to open LTE Italy's map centered in the user's position instead of forcibly opening the BTS's info page.
