--- a/changelog
+++ b/changelog
@@ -1,3 +1,3 @@
-Modificato il modo in cui lo shortcut gestisce i secondi nodi WindTre, facendo in modo che in caso di collegamento a un nodo secondario venga comunque aperta la pagina LTE Italy del nodo principale, in modo da mostrare foto più recenti e informazioni più complete
+Aggiunta integrazione con LTE Italy. Questa versione di ShorteNB richiede l'installazione di Scriptable. N.B.: questa versione di ShorteNB è in beta e non è completa di tutte le feature.
 
-Modified the way the shortcut handles WindTre's secondary nodes. Now, even when the user is connected to a secondary eNB, LTE Italy's page for the primary node will be opened to show more updated images and more complete info
+Added LTE Italy integration. This version of the Shortcut requires Scriptable to work. Note: this version of ShorteNB is in beta and is not feature-complete.
