Added some features back after being partially rewritten

--- a/changelog
+++ b/changelog
@@ -1,3 +1,1 @@
-Aggiunta integrazione con LTE Italy. Questa versione di ShorteNB richiede l'installazione di Scriptable. N.B.: questa versione di ShorteNB è in beta e non è completa di tutte le feature.
-
-Added LTE Italy integration. This version of the Shortcut requires Scriptable to work. Note: this version of ShorteNB is in beta and is not feature-complete.
+Reinseriti il menù per aprire LTE Italy e l'autoupdate. N.B.: questa versione è una beta e potrebbe presentare bug oltre a non essere completa.
