--- a/changelog
+++ b/changelog
@@ -1,1 +1,3 @@
-Reinseriti il menù per aprire LTE Italy e l'autoupdate. N.B.: questa versione è una beta e potrebbe presentare bug oltre a non essere completa.
+Reinseriti il menù per aprire LTE Italy e l'autoupdate. 
+
+N.B.: questa versione è una beta e potrebbe presentare bug oltre a non essere completa.
