--- a/changelog
+++ b/changelog
@@ -1,3 +1,3 @@
-Reinseriti il menù per aprire LTE Italy e l'autoupdate. 
+Corretto un problema con le domande di setup, la cui assenza non faceva eseguire lo shortcut.
 
 N.B.: questa versione è una beta e potrebbe presentare bug oltre a non essere completa.
