Bug fixes, changes to API cookie saving and notification graphic.

--- a/changelog
+++ b/changelog
@@ -1,3 +1,3 @@
-Corretto un problema con le domande di setup, la cui assenza non faceva eseguire lo shortcut.
+Corretto un problema con l'autenticazione di LTE Italy (spero), cambiata la grafica della notifica e bug fixes vari.
 
-N.B.: questa versione è una beta e potrebbe presentare bug oltre a non essere completa.
+DISCLAIMER: questa versione è una beta e potrebbe presentare bug oltre a non essere completa.
