--- a/changelog
+++ b/changelog
@@ -1,3 +1,3 @@
-Corretto un problema con l'autenticazione di LTE Italy (spero), cambiata la grafica della notifica e bug fixes vari.
+Cambiato il setup iniziale dello shortcut, che ora salva i dati in un json, in modo da non dover inserire nuovamente le proprie impostazioni a ogni aggiornamento.
 
 DISCLAIMER: questa versione è una beta e potrebbe presentare bug oltre a non essere completa.
