Fixed an issue with first login, added back possibility to save decoded data in a Note, JSON (new) or TXT.

--- a/changelog
+++ b/changelog
@@ -1,3 +1,3 @@
-Riscritta la logica per calcolare CID, eNB e banda in JavaScript.
+Corretto un problema col primo login, riaggiunta la possibilità di salvare i dati decodificati in un file, aggiungendo anche la possibilità di salvare i dati come un JSON.
 
 DISCLAIMER: questa versione è una beta e potrebbe presentare bug oltre a non essere completa.
