--- a/changelog
+++ b/changelog
@@ -1,5 +1,5 @@
-Hotfix
+Hotfix<br><br>
 
-Modifica minore al salvataggio delle credenziali. Sarà necessario effettuare nuovamente il primo setup dello Shortcut (giuro che sarà l'ultima volta) o eseguire Keychain.set("setup","true") dentro Scriptable.
+Modifica minore al salvataggio delle credenziali. Sarà necessario effettuare nuovamente il primo setup dello Shortcut (giuro che sarà l'ultima volta) o eseguire Keychain.set("setup","true") dentro Scriptable.<br><br>
 
 Aggiunti i CID della B28 e i CID 1xx di Tim, modificato l'ordine di esecuzione per rendere più efficiente l'esecuzione quando il GPS fa fatica a localizzare il telefono, aggiunta l'indicazione dell'MNO rilevato nella notifica.
